<resources>
    <string name="app_name">Guardian</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Guardian</string>
    <string name="menu_admission">New Admission</string>
    <string name="menu_dailyreport">Daily Report</string>
    <string name="menu_searchPatient">Search Patient</string>
</resources>