<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_admission"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_admission" />
        <item
            android:id="@+id/nav_dailyReport"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dailyreport" />
        <item
            android:id="@+id/nav_searchPatient"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_searchPatient" />
    </group>
</menu>