<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.guardian.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_admission"
        android:name="com.example.guardian.ui.admission.AdmissionFragment"
        android:label="@string/menu_admission"
        tools:layout="@layout/fragment_admission" />

    <fragment
        android:id="@+id/nav_dailyReport"
        android:name="com.example.guardian.ui.dailyreport.DailyReportFragment"
        android:label="@string/menu_dailyreport"
        tools:layout="@layout/fragment_dailyreport" />
    <fragment
        android:id="@+id/searchpatientFragment"
        android:name="com.example.guardian.ui.patientlist.searchpatientFragment"
        android:label="fragment_searchpatient_list"
        tools:layout="@layout/fragment_searchpatient_list" />
</navigation>